# realmate-challenge-dev

./: pyproject.toml
chat/: models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
realmate_challenge/: settings.py  urls.py
