[tool.poetry]
name = "realmate-challenge"
version = "0.1.0"
description = ""
authors = ["Rafael Correa Nagy <rafaelcnagy@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13"
django = "^5.1.6" 
django-rest-framework = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
